--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
     "i18next": "^25.0.1",
+    "i18next-browser-languagedetector": "^8.0.5",
+    "i18next-http-backend": "^3.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^15.5.1",
